fix: watermark and footer alignment styles

--- a/src/components/footer/Footer.module.css
+++ b/src/components/footer/Footer.module.css
@@ -1,5 +1,6 @@
 .footer {
     display: flex;
+    align-items: flex-start;
     justify-content: center;
     flex-direction: column;
     gap: 2rem;
@@ -35,6 +36,7 @@
 }
 
 .footer__WaterMark {
+    width: 100vw;
     display: flex;
     justify-content: flex-end;
     align-items: flex-start;
